methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:5: error: not found: value True
      vuBiscuit = True
                  ^